# html-calendar-rs

./: Cargo.toml
src/: main.rs
templates/: index.hbs
